# syncplay

./: .gitignore  GNUmakefile  Makefile  README.md  justfile  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: android-build.yml  build.yml  ci.yml  ios-build.yml  js-ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  PROTOCOL.md  file-transfers.md  webrtc-p2p-protocol.md
docs/plans/: 2026-05-25-peer-media-downloads.md
p2p/: .gitignore  Dockerfile  README.md  docker-compose.yml
p2p/rust/: Cargo.toml
p2p/rust/src/: config.rs  connection.rs  error.rs  file_transfer.rs  lib.rs  main.rs  messages.rs  player.rs  player_controller.rs  sfu.rs  signalling.rs  state.rs  sync.rs  tui.rs  tui_main.rs  turn_main.rs  voice_chat.rs  wire.rs
p2p/rust/tests/: e2e_integration.rs
react-native/: .gitignore  App.tsx  README.md  app.json  jest.config.js  package-lock.json  package.json  tsconfig.json
react-native/__tests__/: appHelpers.test.ts  connection.test.ts  connectionV2.test.ts  directoryScanner.test.ts  managedRooms.test.ts  mediaLibrary.test.ts  playback.test.ts  playlistPlayback.test.ts  preferences.test.ts  protocol.test.ts  rooms.test.ts  screens.test.ts  servers.test.ts  state.test.ts  syncControl.test.ts  transferSocket.test.ts  voiceChat.test.ts
react-native/android/: settings.gradle
react-native/android/app/: build.gradle
react-native/ios/: ExportOptions.plist  Podfile
react-native/ios/SyncplayMobile/: Info.plist  SplashScreen.storyboard
react-native/ios/SyncplayMobile.xcodeproj/: project.pbxproj
react-native/ios/SyncplayMobile.xcworkspace/: contents.xcworkspacedata
react-native/src/app/: ErrorBoundary.tsx  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.png.b64
src-tauri/src/: lib.rs  main.rs
syncplay/: client.py  constants.py  ep_server.py  filetransfer.py  filetransfer_client.py  filetransfer_server.py  filetransfer_wire.py  messages.py  messages_en.py  protocols.py  server.py  utils.py  webrtc_transfer.py
syncplay/players/: mplayer.py  mpv.py  vlc.py
syncplay/tests/: test_filetransfer.py  test_filetransfer_client.py  test_filetransfer_e2e.py  test_filetransfer_protocol.py  test_filetransfer_server.py  test_filetransfer_server_config.py  test_filetransfer_wire.py  test_playlist.py  test_utils.py
syncplay/ui/: ConfigurationGetter.py  GuiConfiguration.py  consoleUI.py  gui.py
web-client/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web-client/e2e/: web-client.spec.ts
web-client/scripts/: run-e2e.mjs
web-client/src/: router.tsx
(+30 files in other folders)
