[package]
name = "syncplay-app"
version = "2.0.0"
edition = "2021"
description = "Syncplay native desktop app"

[lib]
name = "syncplay_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
syncplay-p2p = { path = "../p2p/rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
